--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "webpack-dev-server": "^3.7.2",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "leaflet": "^1.5.1"
   },
   "dependencies": {}
